--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
 <header>
-    
+    <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Logo.jpg" alt="Logo">
 </header>
+<div id="prideshow">
+    <div class="prideslide">
+        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/panorama.jpg" style="width:100%" alt="dutchpride">
+    </div>
+    <div class="prideslide">
+        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Panorama1.jpg" style="width: 100%" alt="hands">
+    </div>
+    <div class="prideslide">
+        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Panorama2.jpg" style="width: 100%" alt="banner">
+    </div>
+    <a class="prev" onclick="plusSlides(-1)"><i class="far fa-arrow-alt-circle-left"></i></a>
+    <a class="next" onclick="plusSlides(1)"><i class="far fa-arrow-alt-circle-right"></i></a>
+</div>
 </body>
 </html>
