--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </header>
 <div id="prideshow">
     <div class="prideslide">
-        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/panorama.jpg" style="width:100%" alt="dutchpride">
+        <img src="./Assets/IMG/panorama.jpg" style="width:100%" alt="dutchpride">
     </div>
     <div class="prideslide">
-        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Panorama1.jpg" style="width: 100%" alt="hands">
+        <img src="./Assets/IMG/Panorama1.jpg" style="width: 100%" alt="hands">
     </div>
     <div class="prideslide">
-        <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Panorama2.jpg" style="width: 100%" alt="banner">
+        <img src="./Assets/IMG/Panorama2.jpg" style="width: 100%" alt="banner">
     </div>
     <a class="prev" onclick="plusSlides(-1)"><i class="far fa-arrow-alt-circle-left"></i></a>
     <a class="next" onclick="plusSlides(1)"><i class="far fa-arrow-alt-circle-right"></i></a>
