--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     <a class="next" onclick="plusSlides(1)"><i class="far fa-arrow-alt-circle-right"></i></a>
 </div>
 </body>
-<script src="./Asset/JS/main.js"></script>
+<script src="./Assets/JS/main.js"></script>
 </html>
