changed img path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <img src="https://github.com/KevinDom-dev/interactive-page-challenge/blob/master/Assets/IMG/Logo.jpg" alt="Logo">
+    <img src="./Assets/IMG/Logo.jpg" alt="Logo">
 </header>
 <div id="prideshow">
     <div class="prideslide">
