--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="prideslide">
         <img src="./Assets/IMG/Panorama2.jpg" style="width: 100%" alt="banner">
     </div>
-    <a class="prev" onclick="plusSlides(-1)"><i class="far fa-arrow-alt-circle-left"></i></a>
-    <a class="next" onclick="plusSlides(1)"><i class="far fa-arrow-alt-circle-right"></i></a>
+    <a class="prev">&#10094;</a>
+    <a class="next">&#10095;</a>
 </div>
 </body>
 <script src="./Assets/JS/main.js"></script>
