--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="./Assets/CSS/style.css"
           rel="stylesheet"
           type="text/css"/>
@@ -12,20 +12,35 @@
 </head>
 <body>
 <header>
-    <img src="./Assets/IMG/Logo.jpg" alt="Logo">
+    <img alt="Logo" src="./Assets/IMG/Logo.jpg">
+    <h1>Pride Europe</h1>
 </header>
 <div id="prideshow">
     <div class="prideslide">
-        <img src="./Assets/IMG/panorama.jpg" style="width:100%" alt="dutchpride">
+        <img alt="dutchpride" src="./Assets/IMG/panorama.jpg" style="width:100%">
     </div>
     <div class="prideslide">
-        <img src="./Assets/IMG/Panorama1.jpg" style="width: 100%" alt="hands">
+        <img alt="hands" src="./Assets/IMG/Panorama1.jpg" style="width: 100%">
     </div>
     <div class="prideslide">
-        <img src="./Assets/IMG/Panorama2.jpg" style="width: 100%" alt="banner">
+        <img alt="banner" src="./Assets/IMG/Panorama2.jpg" style="width: 100%">
     </div>
     <a class="prev">&#10094;</a>
     <a class="next">&#10095;</a>
+</div>
+<div id="tabs">
+    <button class="button1"></button>
+    <button class="button2"></button>
+    <button class="button3"></button>
+</div>
+<div id="summary">
+
+</div>
+<div id="info">
+
+</div>
+<div id="form">
+
 </div>
 </body>
 <script src="./Assets/JS/main.js"></script>
