--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     <a class="next">&#10095;</a>
 </div>
 <div id="tabs">
-    <button class="button1"></button>
-    <button class="button2"></button>
-    <button class="button3"></button>
+    <button class="button1">summary</button>
+    <button class="button2">info</button>
+    <button class="button3">form</button>
 </div>
 <div id="summary">
-
+    <h2>summary</h2>
 </div>
 <div id="info">
-
+    <h2>info</h2>
 </div>
 <div id="form">
-
+    <h2>form</h2>
 </div>
 </body>
 <script src="./Assets/JS/main.js"></script>
