--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
 </div>
 <div id="form" class="tabs">
     <h2>form</h2>
+    <form action="">
+        <label> Name
+            <input type="text" name="Name">
+        </label>
+        <label> Address
+            <input type="text" name="Address">
+        </label>
+        <label> Email
+            <input type="text" name="Email">
+        </label>
+        <label> Phone
+            <input type="text" name="Number">
+        </label>
+
+    <input type="submit">
+    </form>
+
 </div>
 </body>
 <script src="./Assets/JS/main.js"></script>
