--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           rel="stylesheet"
           type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap" rel="stylesheet">
     <title>Pride Europe</title>
 </head>
 <body>
@@ -42,7 +43,7 @@
 </div>
 <div id="form" class="tabs">
     <h2>form</h2>
-    <form action="">
+    <form action="" ID="form">
         <label> Name
             <input type="text" name="Name">
         </label>
