--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <button id="button2">info</button>
     <button id="button3">form</button>
 </div>
-<div id="summary" class="tabs">
+<div id="summary" class="tab">
     <h2>summary</h2>
 </div>
-<div id="info" class="tabs" >
+<div id="info" class="tab" >
     <h2>info</h2>
 </div>
-<div id="form" class="tabs">
+<div id="newsletter" class="tab">
     <h2>form</h2>
     <form action="" ID="form">
         <label> Name
