--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 </div>
 <div id="summary" class="tab">
     <h2>summary</h2>
+    <p>Celebrate pride</p>
 </div>
 <div id="info" class="tab" >
     <h2>info</h2>
+    <p></p>
 </div>
 <div id="newsletter" class="tab">
     <h2>form</h2>
@@ -54,13 +56,16 @@
             <input type="text" name="Email">
         </label>
         <label> Phone
-            <input type="text" name="Number">
+            <input type="text" name="Number" required="">
         </label>
 
     <input type="submit">
     </form>
 
 </div>
+<footer>
+    <p>Number of participants: <span id="participant">50000</span></p>
+</footer>
 </body>
 <script src="./Assets/JS/main.js"></script>
 </html>
