--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <h2>form</h2>
     <form action="" ID="form">
         <label> Name
-            <input type="text" name="Name">
+            <input type="text" name="Name" required="">
         </label>
         <label> Address
-            <input type="text" name="Address">
+            <input type="text" name="Address" required="">
         </label>
         <label> Email
-            <input type="text" name="Email">
+            <input type="text" name="Email" required="">
         </label>
         <label> Phone
             <input type="text" name="Number" required="">
